improved flow