@@ -1,34 +1,29 @@
 package pl.lasota.sensor.core.apis;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.cloud.client.ServiceInstance;
 import org.springframework.cloud.client.discovery.DiscoveryClient;
 import org.springframework.cloud.openfeign.FeignClient;
 import org.springframework.context.annotation.Primary;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.web.client.RestClient;
 import pl.lasota.sensor.core.apis.model.flow.FlowSaveT;
 import pl.lasota.sensor.core.apis.model.flow.FlowSensorT;
 import pl.lasota.sensor.core.apis.model.flow.FlowStatusT;
 import pl.lasota.sensor.core.apis.model.flow.FlowT;
 import pl.lasota.sensor.core.apis.security.InternalClientInterceptorConfiguration;
 
+import java.net.URI;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @FeignClient(name = "sensor-flows", configuration = InternalClientInterceptorConfiguration.class)
 @Primary
 public interface FlowsMicroserviceEndpoint {
-    Logger logger = LoggerFactory.getLogger(FlowsMicroserviceEndpoint.class);
+
     String SENSOR_VALUE_ENDPOINT_PATH = "/api-internal/flow/running";
     String STOP_ENDPOINT_PATH = "/api-internal/flow/stop/{id}";
     String SAVE_ENDPOINT_PATH = "/api-internal/flow/save";
@@ -54,74 +49,54 @@ public interface FlowsMicroserviceEndpoint {
     List<FlowT> get() throws Exception;
 
     @RequestMapping(method = RequestMethod.GET, value = WHERE_EXECUTE_ENDPOINT_PATH)
-    String findInstanceWhoExecute(@PathVariable(value = "id") Long id) throws Exception;
+    String doesExecuteFlowId(@PathVariable(value = "id") Long id) throws Exception;
 
     @RequestMapping(method = RequestMethod.PUT, value = SENSOR_VALUE_ENDPOINT_PATH)
     @Async
-    void sendSensorValue(@RequestBody FlowSensorT sensor) throws Exception;
+    void valueOfSensor(@RequestBody FlowSensorT sensor) throws Exception;
 
 
-    default FlowStatusT stop(Long flowId, String serverId, DiscoveryClient dc, RestTemplate restTemplate) {
-        Optional<String> urlToInstance = getUrlToInstance(serverId, dc, STOP_ENDPOINT_PATH);
+    default Optional<String> broadcastWhoExecuteFlow(Long flowId, DiscoveryClient dc, RestClient restClient, String currentServerId) {
+        return getUrlOthersInstances(currentServerId, dc).
+                stream()
+                .map(uri -> restClient.get().uri(uri + WHERE_EXECUTE_ENDPOINT_PATH, flowId).retrieve().body(String.class))
+                .filter(s -> s != null && !s.isBlank()).findFirst();
+    }
+
+    default FlowStatusT stopOnIndicateServer(Long flowId, String sendToServerId, DiscoveryClient dc, RestClient restClient) {
+        Optional<URI> urlToInstance = getUrlToInstance(sendToServerId, dc);
         if (urlToInstance.isEmpty()) {
             return FlowStatusT.NOT_FOUND;
         }
-
-        ResponseEntity<FlowStatusT> response = restTemplate.exchange(
-                urlToInstance.get(),
-                HttpMethod.DELETE,
-                HttpEntity.EMPTY,
-                FlowStatusT.class,
-                flowId);
-
-        return response.getBody();
+        URI uri = urlToInstance.get();
+        return restClient.delete().uri(uri + STOP_ENDPOINT_PATH, flowId).retrieve().body(FlowStatusT.class);
     }
 
-
-
-    default List<String> findInstanceWhoExecute(Long flowId, String serverId, DiscoveryClient dc, RestTemplate restTemplate) {
-        return getUrlOthersInstances(serverId, dc, WHERE_EXECUTE_ENDPOINT_PATH)
-                .stream().map(s -> {
-                    ResponseEntity<String> response = restTemplate.exchange(
-                            s,
-                            HttpMethod.GET,
-                            HttpEntity.EMPTY,
-                            String.class,
-                            flowId);
-                    return response.getBody();
-                }).filter(s -> s != null && !s.isBlank()).collect(Collectors.toList());
+    default void broadcastValueOfSensorToAllInstances(FlowSensorT sensor, DiscoveryClient dc, RestClient restClient) {
+        getAllInstances(dc).forEach(uri ->
+             restClient.put().uri(uri + SENSOR_VALUE_ENDPOINT_PATH).body(sensor).retrieve().toBodilessEntity());
     }
 
-
-    default void sendSensorValue(FlowSensorT sensor, DiscoveryClient dc, RestTemplate restTemplate) {
-        for (String s : dc.getServices()
+    private List<URI> getAllInstances(DiscoveryClient dc) {
+        return dc.getInstances("sensor-flows")
                 .stream()
-                .filter(s -> s.contains("sensor-flows"))
-                .toList()) {
-            List<ServiceInstance> instances = dc.getInstances(s);
-            instances.stream().map(instance -> instance.getUri().toString() + SENSOR_VALUE_ENDPOINT_PATH).forEach(url -> {
-                try {
-                    restTemplate.put(url, sensor);
-                } catch (Exception e) {
-                    logger.error("Occurred problem  with send data to flow {} to {}", sensor, url, e);
-                }
-            });
-        }
+                .map(ServiceInstance::getUri)
+                .toList();
     }
 
-    private Optional<String> getUrlToInstance(String serverId, DiscoveryClient dc, String path) {
+    private Optional<URI> getUrlToInstance(String serverId, DiscoveryClient dc) {
         Optional<ServiceInstance> first = dc.getInstances("sensor-flows")
                 .stream()
                 .filter(instance -> instance.getInstanceId().equals(serverId))
                 .findFirst();
-        return first.map(instance -> instance.getUri() + path);
+        return first.map(ServiceInstance::getUri);
     }
 
 
-    private List<String> getUrlOthersInstances(String serverId, DiscoveryClient dc, String path) {
+    private List<URI> getUrlOthersInstances(String serverId, DiscoveryClient dc) {
         return dc.getInstances("sensor-flows")
                 .stream()
                 .filter(instance -> !instance.getInstanceId().equals(serverId))
-                .map(instance -> instance.getUri() + path).collect(Collectors.toList());
+                .map(ServiceInstance::getUri).toList();
     }
 }
